--- a/styles/place.css
+++ b/styles/place.css
@@ -46,6 +46,16 @@ h2 {
     margin-bottom: 0.5rem;
 }
 
+h2::after {
+  content: "";
+  display: block;
+  width: 50px;
+  height: 3px;
+  background: var(--blue-water);
+  margin: 0.5rem auto 0;
+  border-radius: 2px;
+}
+
 .data ul {
     list-style: none;
 }
